--- a/style.css
+++ b/style.css
@@ -1,3 +1,44 @@
 * {
-    background-color: whitesmoke;
+    box-sizing: border-box;
+  }
+
+.navbar {
+    background-color: black;
+    margin-bottom: 0%;
 }
+
+#img {
+    width: 100%;
+    height: 400px; object-fit: cover;
+    margin: 0%;
+}
+
+main {
+    display: flex;
+  }
+
+aside {
+    width: 35%;
+    padding: 15px;
+    margin-right: 15px;
+    margin-left: 15px;
+    float: left;
+    font-style: italic;
+    background-color: lightgray;
+  }
+#graph {
+    width: 800px;
+    height: 90%;
+    margin: 0%;
+}
+
+#germ {
+    max-width: 100%;
+    height: auto;
+    padding-right: 45px;
+    padding-bottom: 15px;
+    margin-right: 15px;
+    margin-left: 15px;
+}
+
+
