--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ aside {
     margin-left: 15px;
 }
 
+#part {
+    text-decoration: underline;
+}
+
 .diseases {
     display: flex;
     flex-wrap: wrap;
@@ -123,6 +127,13 @@ aside {
     margin: 15px;
     background-color: lightgray;
 }
+
+footer {
+    text-align: center;
+    padding: 3px;
+    background-color: black;
+    color: white;
+  }
 
 @media screen and (max-width: 768px) {
     /* Use flex-direction to stack the navbar, sidebar, and body */
